--- a/myapp/templates/main/upload.html
+++ b/myapp/templates/main/upload.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html'%}
+{% load crispy_forms_tags %}
+{% block content%}
+{% load static %}
+<div class="container" style="margin-top:10%">
+
+    <form action="" method="post">
+        {% csrf_token%}
+        {{form | crispy}}
+    <button type="submit" class="btn">Submit Project</button>
+    </form>
+</div>
+{% endblock %}
