Fix the databse url on the .env file

--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -23,3 +23,24 @@ display:flex;
 .form-text{
 
 display:none;}
+
+.des,.des1,.des2,.des3{
+    color:white;
+    border-radius: 50%;
+    height:78px;
+    width:78px;
+    padding-top:30%;
+    font-size:17px;
+}
+.des{
+    border: 3px solid orange;
+}
+.des1{
+    border: 3px solid brown;
+}
+.des2{
+    border: 3px solid blue;
+}
+.des3{
+    border: 3px solid green;
+}
