--- a/myapp/templates/main/index.html
+++ b/myapp/templates/main/index.html
@@ -44,61 +44,42 @@
                                 </div>
                             </div>
                             <div class="box-notesite js-notes">
-                                <ul>
-                                    <li class="circle-note-progress style-design" data-note="7.62">
+                                    <li class="circle-note-progress style-design" data-note="">
                                         <div class="circle">
-                                            <svg width="84" height="84">
-                                                <circle r="38" cy="41" cx="41"/>
-                                                <circle r="38" cy="41" cx="41" stroke-linejoin="round"
-                                                        stroke-linecap="round" class="circle-progress"/>
-                                            </svg>
-                                            <div class="percent">
-                                                <span class="int">0</span><span class="dec">.00</span>
+                                            <div class="des">
+                                                <p class="d-block mx-auto textrate">{{ratings.design_average}}</p>
                                             </div>
                                         </div>
                                         <div class="legend">DESIGN</div>
                                     </li>
-                                    <li class="circle-note-progress style-usability" data-note="7.53">
+                                    <li class="circle-note-progress style-usability"
+                                        data-note="{{rating.usability_average}}">
                                         <div class="circle">
-                                            <svg width="84" height="84">
-                                                <circle r="38" cy="41" cx="41"/>
-                                                <circle r="38" cy="41" cx="41" stroke-linejoin="round"
-                                                        stroke-linecap="round" class="circle-progress"/>
-                                            </svg>
-                                            <div class="percent">
-                                                <span class="int">0</span><span class="dec">.00</span>
+                                            <div class="des1">
+                                                <p class="d-block mx-auto textrate">{{ratings.usability_average}}</p>
                                             </div>
                                         </div>
                                         <div class="legend">USABILITY</div>
                                     </li>
-                                    <li class="circle-note-progress style-creativity" data-note="7.19">
+                                    <li class="circle-note-progress style-creativity"
+                                        data-note="{{rating.content_average}}">
                                         <div class="circle">
-                                            <svg width="84" height="84">
-                                                <circle r="38" cy="41" cx="41"/>
-                                                <circle r="38" cy="41" cx="41" stroke-linejoin="round"
-                                                        stroke-linecap="round" class="circle-progress"/>
-                                            </svg>
-                                            <div class="percent">
-                                                <span class="int">0</span><span class="dec">.00</span>
-                                            </div>
-                                        </div>
-                                        <div class="legend">CREATIVITY</div>
-                                    </li>
-                                    <li class="circle-note-progress style-content" data-note="7.89">
-                                        <div class="circle">
-                                            <svg width="84" height="84">
-                                                <circle r="38" cy="41" cx="41"/>
-                                                <circle r="38" cy="41" cx="41" stroke-linejoin="round"
-                                                        stroke-linecap="round" class="circle-progress"/>
-                                            </svg>
-                                            <div class="percent">
-                                                <span class="int">0</span><span class="dec">.00</span>
+                                            <div class="des2">
+                                                <p class="d-block mx-auto textrate">{{ratings.content_average}}</p>
                                             </div>
                                         </div>
                                         <div class="legend">CONTENT</div>
                                     </li>
-
+                                    <li class="circle-note-progress style-content" data-note="{{ rating.score }}">
+                                        <div class="circle">
+                                            <div class="des3">
+                                                <p class="d-block mx-auto textrate">12.45</p>
+                                            </div>
+                                        </div>
+                                        <div class="legend">SCORE</div>
+                                    </li>
                                 </ul>
+
                             </div>
                         </div>
                         <div class="box-breadcrumb">
