--- a/myapp/templates/profile/profile.html
+++ b/myapp/templates/profile/profile.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-
 <div class="container" style="margin-top:7%;">
-    <img class="rounded-circle account-img content-center" src="{{ user.profile.profile_picture.url }}">
-    <p class="text-center">{{user.username}}</p>
-    <p class="text-center"> {{user.email}}</p>
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 mt-4">
+            <img class="rounded-circle account-img d-block mx-auto" src="{{ user.profile_picture.url }}" alt="profile pic">
+            <h5 class="text-center mt-3">{{user.username}}</h5>
+            <p class="text-center"> {{user.email}}</p>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+
 </div>
-
-
 {% endblock %}
