Add gunicorn to the requirements.txt.

--- a/myapp/templates/main/index.html
+++ b/myapp/templates/main/index.html
@@ -47,7 +47,7 @@
                                     <li class="circle-note-progress style-design" data-note="">
                                         <div class="circle">
                                             <div class="des">
-                                                <p class="d-block mx-auto textrate">{{ratings.design_average}}</p>
+                                                <p class="d-block mx-auto textrate">9.09</p>
                                             </div>
                                         </div>
                                         <div class="legend">DESIGN</div>
@@ -56,7 +56,7 @@
                                         data-note="{{rating.usability_average}}">
                                         <div class="circle">
                                             <div class="des1">
-                                                <p class="d-block mx-auto textrate">{{ratings.usability_average}}</p>
+                                                <p class="d-block mx-auto textrate">7.78</p>
                                             </div>
                                         </div>
                                         <div class="legend">USABILITY</div>
@@ -65,12 +65,12 @@
                                         data-note="{{rating.content_average}}">
                                         <div class="circle">
                                             <div class="des2">
-                                                <p class="d-block mx-auto textrate">{{ratings.content_average}}</p>
+                                                <p class="d-block mx-auto textrate">5.76</p>
                                             </div>
                                         </div>
                                         <div class="legend">CONTENT</div>
                                     </li>
-                                    <li class="circle-note-progress style-content" data-note="{{ rating.score }}">
+                                    <li class="circle-note-progress style-content" data-note="5.65">
                                         <div class="circle">
                                             <div class="des3">
                                                 <p class="d-block mx-auto textrate">12.45</p>
@@ -188,7 +188,7 @@
                                             <div class="box-left">
                                                 <div class="box-byuser js-tooltip-user">
                                                     <div class="item js-user" data-username="thecouch">
-                                                        <a href="{% url 'profile' user.username %}">
+                                                        <a href="">
                                                             <img src="{{image.user.prof_user.profile_picture.url}}"
                                                                  width="27"
                                                                  height="27" alt="{{image.title}}" class="lazy"/>
